trying to fix layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,9 @@
 * {
   font-family: 'Roboto', sans-serif;
   font-weight: normal;
+  box-shadow: inset 0 0 0 1px rgba(255, 0, 0, 50%);
+}
+
+body {
+  margin: 0px;
 }
